--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
         "tailwindcss": "^3.2.4",
         "ts-loader": "^9.4.1",
         "typescript": "^4.9.3",
+        "unistore": "^3.5.2",
         "webpack": "^5.74.0",
         "webpack-cli": "^4.10.0",
         "webpack-notifier": "^1.15.0"
