--- a/config/packages/doctrine.yaml
+++ b/config/packages/doctrine.yaml
@@ -8,8 +8,8 @@ doctrine:
         mappings:
             App:
                 is_bundle: false
-                dir: '%kernel.project_dir%/src/Entity'
-                prefix: 'App\Entity'
+                dir: '%kernel.project_dir%/src/Core/Persistence/Entity'
+                prefix: 'App\Core\Persistence\Entity'
                 alias: App
 
 when@test:
