--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -7,6 +7,7 @@ services:
     volumes:
       - .:/app
     depends_on:
+      - database
       - php-fpm
     ports:
       - "8083:80"
@@ -23,6 +24,7 @@ services:
     ports:
       - "9000:9000"
     networks:
+      database:
       php-fpm:
   php-cli:
     build:
@@ -45,6 +47,8 @@ services:
       - ./database:/var/lib/postgresql/data:rw
     ports:
       - "15434:5432"
+    networks:
+      database:
 
 volumes:
   composer:
