--- a/config/packages/security.yaml
+++ b/config/packages/security.yaml
@@ -1,8 +1,8 @@
 security:
+    enable_authenticator_manager: true
     password_hashers:
         Symfony\Component\Security\Core\User\PasswordAuthenticatedUserInterface: 'auto'
     providers:
-        # used to reload user from session & other features (e.g. switch_user)
         app_user_provider:
             entity:
                 class: App\Core\Persistence\Entity\User
@@ -11,7 +11,10 @@ security:
         dev:
             pattern: ^/(_(profiler|wdt)|css|images|js)/
             security: false
-        main:
+
+        authorization:
+            pattern: ^/api/v(\d+)/authorization/(login|register)
+            stateless: true
             lazy: true
             provider: app_user_provider
 
@@ -21,9 +24,14 @@ security:
             custom_authenticators:
                 - App\Core\Symfony\Security\CustomJsonLoginAuthenticator
 
+        main:
+            lazy: true
+            provider: app_user_provider
+            jwt: ~
+
     access_control:
-        # - { path: ^/admin, roles: ROLE_ADMIN }
-        # - { path: ^/profile, roles: ROLE_USER }
+        - { path: ^/api/v(\d+)/authorization/(login|register), roles: PUBLIC_ACCESS }
+        - { path: ^/api, roles: IS_AUTHENTICATED_FULLY }
 
 when@test:
     security:
