--- a/package.json
+++ b/package.json
@@ -30,5 +30,8 @@
         "dev": "encore dev",
         "watch": "encore dev --watch",
         "build": "encore production --progress"
+    },
+    "dependencies": {
+        "typescript-cookie": "^1.0.4"
     }
 }
