--- a/composer.json
+++ b/composer.json
@@ -4,7 +4,7 @@
     "minimum-stability": "stable",
     "prefer-stable": true,
     "require": {
-        "php": ">=8.1",
+        "php": ">=8.2",
         "ext-ctype": "*",
         "ext-iconv": "*",
         "digitalrevolution/symfony-request-validation": "^2.0",
@@ -16,14 +16,18 @@
         "symfony/console": "6.1.*",
         "symfony/dotenv": "6.1.*",
         "symfony/flex": "^2",
+        "symfony/form": "6.1.*",
         "symfony/framework-bundle": "6.1.*",
+        "symfony/mailer": "6.1.*",
+        "symfony/monolog-bundle": "^3.8",
         "symfony/runtime": "6.1.*",
         "symfony/security-bundle": "6.1.*",
         "symfony/security-csrf": "6.1.*",
         "symfony/translation": "6.1.*",
         "symfony/twig-bundle": "6.1.*",
         "symfony/webpack-encore-bundle": "^1.16",
-        "symfony/yaml": "6.1.*"
+        "symfony/yaml": "6.1.*",
+        "symfonycasts/reset-password-bundle": "^1.16"
     },
     "require-dev": {
         "friendsofphp/php-cs-fixer": "^3.13",
