--- a/config/packages/security.yaml
+++ b/config/packages/security.yaml
@@ -12,8 +12,8 @@ security:
             pattern: ^/(_(profiler|wdt)|css|images|js)/
             security: false
 
-        registration:
-            pattern: ^/api/v(\d+)/authorization/register
+        not_secure:
+            pattern: ^/api/v(\d+)/authorization/(register|restore_password)
             stateless: true
             lazy: true
             provider: app_user_provider
@@ -39,7 +39,7 @@ security:
                 path: v1_authorization_logout
 
     access_control:
-        - { path: ^/api/v(\d+)/authorization/(login|register), roles: PUBLIC_ACCESS }
+        - { path: ^/api/v(\d+)/authorization/(login|register|restore_password), roles: PUBLIC_ACCESS }
         - { path: ^/api, roles: IS_AUTHENTICATED_FULLY }
 
 when@test:
