--- a/.env.test
+++ b/.env.test
@@ -4,3 +4,5 @@ APP_SECRET='$ecretf0rt3st'
 SYMFONY_DEPRECATIONS_HELPER=999999
 PANTHER_APP_ENV=panther
 PANTHER_ERROR_SCREENSHOT_DIR=./var/error-screenshots
+
+DATABASE_URL=postgresql://postgres:123123@database:5432/postgres_test?sslmode=disable&charset=utf8
