--- a/composer.json
+++ b/composer.json
@@ -30,10 +30,15 @@
         "symfonycasts/reset-password-bundle": "^1.16"
     },
     "require-dev": {
+        "behat/behat": "^3.12",
+        "friends-of-behat/symfony-extension": "^2.4",
         "friendsofphp/php-cs-fixer": "^3.13",
         "phpstan/phpstan": "^1.9",
         "phpunit/phpunit": "^9.5",
-        "symfony/maker-bundle": "^1.48"
+        "symfony/browser-kit": "6.1.*",
+        "symfony/css-selector": "6.1.*",
+        "symfony/maker-bundle": "^1.48",
+        "symfony/phpunit-bridge": "^6.2"
     },
     "config": {
         "allow-plugins": {
