--- a/config/packages/security.yaml
+++ b/config/packages/security.yaml
@@ -26,15 +26,13 @@ security:
 
             json_login:
                 check_path: v1_authorization_login
-
-            custom_authenticators:
-                - App\Core\Symfony\Security\CustomJsonLoginAuthenticator
+                success_handler: lexik_jwt_authentication.handler.authentication_success
+                failure_handler: lexik_jwt_authentication.handler.authentication_failure
 
         main:
             lazy: true
             provider: app_user_provider
             jwt: ~
-
             logout:
                 path: v1_authorization_logout
 
