--- a/config/routes.yaml
+++ b/config/routes.yaml
@@ -1,3 +1,9 @@
 controllers:
-    resource: ../src/Controller/
+    resource: ../src/Core/Presentation/Controller/
     type: attribute
+
+v1_authorization_login:
+    path: /api/v1/authorization/login
+
+# api_refresh_token:
+#    path: /api/v1/refresh_token
