--- a/.env.test
+++ b/.env.test
@@ -5,4 +5,9 @@ SYMFONY_DEPRECATIONS_HELPER=999999
 PANTHER_APP_ENV=panther
 PANTHER_ERROR_SCREENSHOT_DIR=./var/error-screenshots
 
+MAIL_DEFAULT_FROM=noreply@lss.com
+MAIL_HELP_EMAIL=help@lss.com
+
 DATABASE_URL=postgresql://postgres:123123@database:5432/postgres_test?sslmode=disable&charset=utf8
+
+MAILER_DSN=null://null
