--- a/behat.yml
+++ b/behat.yml
@@ -15,6 +15,11 @@ default:
                 - '%paths.base%/tests/Feature/v1/Authorization/CheckResetTokenTest'
             contexts:
                 - App\Tests\Feature\v1\Authorization\CheckResetTokenTest\FeatureContext
+        v1_authorization_send_reset_password:
+            paths:
+                - '%paths.base%/tests/Feature/v1/Authorization/SendResetPasswordTest'
+            contexts:
+                - App\Tests\Feature\v1\Authorization\SendResetPasswordTest\FeatureContext
 
     extensions:
         FriendsOfBehat\SymfonyExtension:
