Change password test

--- a/behat.yml
+++ b/behat.yml
@@ -20,6 +20,11 @@ default:
                 - '%paths.base%/tests/Feature/v1/Authorization/SendResetPasswordTest'
             contexts:
                 - App\Tests\Feature\v1\Authorization\SendResetPasswordTest\FeatureContext
+        v1_authorization_change_password:
+            paths:
+                - '%paths.base%/tests/Feature/v1/Authorization/ChangePasswordTest'
+            contexts:
+                - App\Tests\Feature\v1\Authorization\ChangePasswordTest\FeatureContext
 
     extensions:
         FriendsOfBehat\SymfonyExtension:
