--- a/.env.test
+++ b/.env.test
@@ -1,4 +1,3 @@
-# define your env variables for the test env here
 KERNEL_CLASS='App\Kernel'
 APP_SECRET='$ecretf0rt3st'
 SYMFONY_DEPRECATIONS_HELPER=999999
@@ -11,3 +10,5 @@ MAIL_HELP_EMAIL=help@lss.com
 DATABASE_URL=postgresql://postgres:123123@database:5432/postgres_test?sslmode=disable&charset=utf8
 
 MAILER_DSN=null://null
+
+HASH_PASSWORD_ALGORITHM=plaintext
