--- a/config/packages/security.yaml
+++ b/config/packages/security.yaml
@@ -1,7 +1,7 @@
 security:
-    enable_authenticator_manager: true
     password_hashers:
-        Symfony\Component\Security\Core\User\PasswordAuthenticatedUserInterface: 'auto'
+        App\Core\Persistence\Entity\User:
+            algorithm: '%env(resolve:HASH_PASSWORD_ALGORITHM)%'
     providers:
         app_user_provider:
             entity:
@@ -43,8 +43,5 @@ security:
 when@test:
     security:
         password_hashers:
-            Symfony\Component\Security\Core\User\PasswordAuthenticatedUserInterface:
-                algorithm: auto
-                cost: 4 # Lowest possible value for bcrypt
-                time_cost: 3 # Lowest possible value for argon
-                memory_cost: 10 # Lowest possible value for argon
+            App\Core\Persistence\Entity\User:
+                algorithm: plaintext
