--- a/config/packages/security.yaml
+++ b/config/packages/security.yaml
@@ -12,12 +12,6 @@ security:
             pattern: ^/(_(profiler|wdt)|css|images|js)/
             security: false
 
-        not_secure:
-            pattern: ^/api/v(\d+)/authorization/(register|restore_password|check_reset_token|change_password)
-            stateless: true
-            lazy: true
-            provider: app_user_provider
-
         authorization:
             pattern: ^/api/v(\d+)/authorization/login
             stateless: true
@@ -33,11 +27,15 @@ security:
             lazy: true
             provider: app_user_provider
             jwt: ~
+            entry_point: jwt
+            refresh_jwt:
+                check_path: v1_authorization_refresh_token
             logout:
                 path: v1_authorization_logout
 
     access_control:
-        - { path: ^/api/v(\d+)/authorization/(login|register|restore_password|check_reset_token|change_password), roles: PUBLIC_ACCESS }
+        - { path: ^/api/v(\d+)/authorization/(login|register|restore_password|check_reset_token|change_password|refresh_token), roles: PUBLIC_ACCESS }
+        - { path: ^/api/v(\d+)/init, roles: PUBLIC_ACCESS }
         - { path: ^/api, roles: IS_AUTHENTICATED_FULLY }
 
 when@test:
