--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
         "@hotwired/turbo": "^7.0.1",
         "@symfony/stimulus-bridge": "^3.2.0",
         "@symfony/webpack-encore": "^4.0.0",
+        "@tailwindcss/forms": "^0.5.3",
         "autoprefixer": "^10.4.13",
         "babel-preset-preact": "^2.0.0",
         "core-js": "^3.23.0",
