Admin movie saving (with a little crutch unfortunately)

--- a/docker/php-cli/development/Dockerfile
+++ b/docker/php-cli/development/Dockerfile
@@ -1,8 +1,17 @@
 FROM php:8.2-cli
 
+RUN curl -sS -o /tmp/icu.tar.gz -L https://github.com/unicode-org/icu/releases/download/release-72-1/icu4c-72_1-src.tgz \
+    && tar -zxf /tmp/icu.tar.gz -C /tmp \
+    && cd /tmp/icu/source \
+    && ./configure --prefix=/usr/local \
+    && make \
+    && make install
+
 RUN apt-get update && apt-get install -y libpq-dev libzip-dev zip git \
     && docker-php-ext-configure pgsql -with-pgsql=/usr/local/pgsql \
-    && docker-php-ext-install pdo pdo_pgsql pgsql zip
+    && docker-php-ext-configure intl \
+    && docker-php-ext-install pdo pdo_pgsql pgsql zip intl \
+    && docker-php-ext-enable intl
 
 RUN curl -sS https://getcomposer.org/installer | php -- --install-dir=/bin --filename=composer --quiet
 
