--- a/docker/php-fpm/development/Dockerfile
+++ b/docker/php-fpm/development/Dockerfile
@@ -1,8 +1,16 @@
 FROM php:8.2-fpm
 
+RUN curl -sS -o /tmp/icu.tar.gz -L https://github.com/unicode-org/icu/releases/download/release-72-1/icu4c-72_1-src.tgz \
+    && tar -zxf /tmp/icu.tar.gz -C /tmp \
+    && cd /tmp/icu/source \
+    && ./configure --prefix=/usr/local \
+    && make \
+    && make install
+
 RUN apt-get update && apt-get install -y libpq-dev \
     && docker-php-ext-configure pgsql -with-pgsql=/usr/local/pgsql \
-    && docker-php-ext-install pdo pdo_pgsql pgsql \
-    && docker-php-ext-enable pdo_pgsql
+    && docker-php-ext-configure intl \
+    && docker-php-ext-install pdo pdo_pgsql pgsql intl \
+    && docker-php-ext-enable pdo_pgsql intl
 
 WORKDIR /app
