--- a/composer.json
+++ b/composer.json
@@ -30,7 +30,8 @@
         "symfony/twig-bundle": "6.1.*",
         "symfony/webpack-encore-bundle": "^1.16",
         "symfony/yaml": "6.1.*",
-        "symfonycasts/reset-password-bundle": "^1.16"
+        "symfonycasts/reset-password-bundle": "^1.16",
+        "vich/uploader-bundle": "^2.0"
     },
     "require-dev": {
         "behat/behat": "^3.12",
