--- a/.env.test
+++ b/.env.test
@@ -10,3 +10,5 @@ MAIL_HELP_EMAIL=help@lss.com
 DATABASE_URL=postgresql://postgres:123123@database:5432/postgres_test?sslmode=disable&charset=utf8
 
 MAILER_DSN=null://null
+
+ELASTICSEARCH_URL=http://localhost:9200/
