--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -15,6 +15,7 @@ services:
       database:
       php-fpm:
       mailer:
+
   php-fpm:
     build:
       context: ./docker/php-fpm/development
@@ -31,11 +32,13 @@ services:
       database:
       php-fpm:
       mailer:
+
   php-cli:
     build:
       context: ./docker/php-cli/development
     environment:
       DATABASE_URL: ${DATABASE_URL}
+      ELASTICSEARCH_URL: ${ELASTICSEARCH_URL}
       JWT_SECRET_KEY: ${JWT_SECRET_KEY}
       JWT_PUBLIC_KEY: ${JWT_PUBLIC_KEY}
       JWT_PASSPHRASE: ${JWT_PASSPHRASE}
@@ -48,6 +51,7 @@ services:
       - database
     networks:
       database:
+
   database:
     build:
       context: ./docker/postgres/development
@@ -63,6 +67,18 @@ services:
       - "15434:5432"
     networks:
       database:
+
+  elasticsearch:
+    build:
+      context: ./docker/elasticsearch/development
+    environment:
+      discovery.type: "single-node"
+      xpack.security.enabled: false
+    ports:
+      - "9202:9200"
+    networks:
+      php-fpm:
+
 ###> symfony/mailer ###
   mailer:
     image: schickling/mailcatcher
