--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -72,8 +72,11 @@ services:
     build:
       context: ./docker/elasticsearch/development
     environment:
-      discovery.type: "single-node"
-      xpack.security.enabled: false
+      - discovery.type=single-node
+      - xpack.security.enabled=false
+      - "ES_JAVA_OPTS=-Xms1g -Xmx1g"
+    volumes:
+      - ./elasticsearch:/usr/share/elasticsearch/data
     ports:
       - "9202:9200"
     networks:
