--- a/composer.json
+++ b/composer.json
@@ -17,20 +17,20 @@
         "gesdinet/jwt-refresh-token-bundle": "^1.1",
         "lexik/jwt-authentication-bundle": "^2.16",
         "symfony-bundles/json-request-bundle": "^4.1",
-        "symfony/console": "6.1.*",
-        "symfony/dotenv": "6.1.*",
+        "symfony/console": "^6.1",
+        "symfony/dotenv": "^6.1",
         "symfony/flex": "^2",
-        "symfony/form": "6.1.*",
-        "symfony/framework-bundle": "6.1.*",
-        "symfony/mailer": "6.1.*",
+        "symfony/form": "^6.1",
+        "symfony/framework-bundle": "^6.1",
+        "symfony/mailer": "^6.1",
         "symfony/monolog-bundle": "^3.8",
-        "symfony/runtime": "6.1.*",
-        "symfony/security-bundle": "6.1.*",
-        "symfony/security-csrf": "6.1.*",
-        "symfony/translation": "6.1.*",
-        "symfony/twig-bundle": "6.1.*",
+        "symfony/runtime": "^6.1",
+        "symfony/security-bundle": "^6.1",
+        "symfony/security-csrf": "^6.1",
+        "symfony/translation": "^6.1",
+        "symfony/twig-bundle": "^6.1",
         "symfony/webpack-encore-bundle": "^1.16",
-        "symfony/yaml": "6.1.*",
+        "symfony/yaml": "^6.1",
         "symfonycasts/reset-password-bundle": "^1.16",
         "vich/uploader-bundle": "^2.0"
     },
@@ -40,12 +40,12 @@
         "friendsofphp/php-cs-fixer": "^3.13",
         "phpstan/phpstan": "^1.9",
         "phpunit/phpunit": "^9.5",
-        "symfony/browser-kit": "6.1.*",
-        "symfony/css-selector": "6.1.*",
+        "symfony/browser-kit": "^6.1",
+        "symfony/css-selector": "^6.1",
         "symfony/maker-bundle": "^1.48",
         "symfony/phpunit-bridge": "^6.2",
-        "symfony/stopwatch": "6.1.*",
-        "symfony/web-profiler-bundle": "6.1.*"
+        "symfony/stopwatch": "^6.1",
+        "symfony/web-profiler-bundle": "^6.1"
     },
     "config": {
         "allow-plugins": {
@@ -96,7 +96,7 @@
     "extra": {
         "symfony": {
             "allow-contrib": false,
-            "require": "6.1.*"
+            "require": "^6.1"
         }
     }
 }
