--- a/.env.test
+++ b/.env.test
@@ -12,3 +12,5 @@ DATABASE_URL=postgresql://postgres:123123@database:5432/postgres_test?sslmode=di
 MAILER_DSN=null://null
 
 ELASTICSEARCH_URL=http://localhost:9200/
+
+SENTRY_DSN=
