--- a/config/packages/security.yaml
+++ b/config/packages/security.yaml
@@ -44,8 +44,9 @@ security:
                 path: v1_authorization_logout
 
     access_control:
-        - { path: ^/api/v(\d+)/authorization/(login|register|restore_password|check_reset_token|change_password|refresh_token), roles: PUBLIC_ACCESS }
+        - { path: ^/api/v(\d+)/authorization, roles: PUBLIC_ACCESS }
         - { path: ^/api/v(\d+)/init, roles: PUBLIC_ACCESS }
+        - { path: ^/api/v(\d+)/user/init, roles: PUBLIC_ACCESS }
         - { path: ^/api/v(\d+)/entity/search, roles: PUBLIC_ACCESS }
         - { path: ^/admin/(login|logout), roles: PUBLIC_ACCESS }
         - { path: ^/api, roles: IS_AUTHENTICATED_FULLY }
